@@ -131,9 +131,9 @@
                     <configuration>
                         <source>22</source>
                         <target>22</target>
-                        <compilerArgs>
-                            <arg>--enable-preview</arg>
-                        </compilerArgs>
+<!--                        <compilerArgs>-->
+<!--                            <arg>&#45;&#45;enable-preview</arg>-->
+<!--                        </compilerArgs>-->
                     </configuration>
                 </plugin>
 
@@ -142,9 +142,9 @@
                     <artifactId>groovy-eclipse-compiler</artifactId>
                     <version>3.9.0</version>
                     <extensions>true</extensions>
-                    <configuration>
-                        <enablePreview>true</enablePreview>
-                    </configuration>
+<!--                    <configuration>-->
+<!--                        <enablePreview>true</enablePreview>-->
+<!--                    </configuration>-->
                 </plugin>
 
                 <!--                <plugin>-->
